Changes to the new holding page and Google Anlytics.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,6 +12,10 @@
             <div class="strapline">
                 Bringing <em>meaning</em> to<br>your message.
             </div>
+            <p class="text-center" style="margin-top:15px;">
+            <a href="mailto:hello@mantrahq.com" class="btn btn-primary btn-lg" 
+                style="color:black; font-family:'Alegreya SC', Georgia, 'Times New Roman', Times, serif;">Contact us now</a>
+            </p>
         </div>
     </div>
 </div>
