--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,10 @@
-<div class="background-dark">
-      <div class="container">
-            <p>&copy; Copyright  Mantra Media ltd {{ site.year }}
-      </div>
-</div>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+              })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="{{ "/js/bootstrap.js" | prepend: site.baseurl }}"></script>
+  ga('create', 'UA-58543934-1', 'auto');
+    ga('send', 'pageview');
+
+</script>
