--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,7 @@
 ---
 @charset "utf-8";
 
-@import url(http://fonts.googleapis.com/css?family=Droid+Serif:400,700);
+@import url(http://fonts.googleapis.com/css?family=Alegreya+SC:400,700);
 
 $yellow: #ffe066;
 $orange: #f6791f;
