--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <body>
 
         {% include header.html %}
+<script src="//copybar.io/wbarton/copy-test.js"></script>
 
         {% include footer.html %}
 
