Export from other repo.

--- a/_includes/about-us.html
+++ b/_includes/about-us.html
@@ -1,20 +1,15 @@
-<div class="background-light">
+<div class="background-light roomy-row">
 <div class="container">
     <div class="row">
-        <div class="col-sm-8">
-            <p>
-                None so dutiful ever vigilant, take the black, sed sun poison is a woman's weapon you know nothing 
-                gown. Let me soar mare's milk, none so wise though all men do despise us ea commodo consequat. Drink, 
-                your king commands it no song so sweet spearwife cillum dolore eu fugiat nulla pariatur. Excepteur 
-                beast tunic in his cups, honeyed locusts moon-flower juice officia lamprey mollit anim full of terrors.
-            </p>
-        </div>
-        <div class="col-sm-4 background-medium">
-            <p>
-                None so dutiful ever vigilant, take the black, sed sun poison is a woman's weapon you know nothing 
-                gown. Let me soar mare's milk, none so wise though all men do despise us ea commodo consequat. Drink, 
-                your king commands it no song so sweet spearwife cillum dolore eu fugiat nulla pariatur. Excepteur 
-                beast tunic in his cups, honeyed locusts moon-flower juice officia lamprey mollit anim full of terrors.
+        <div class="col-sm-8 col-sm-offset-2">
+            <p class="lead">
+                At Mantra we create strategies and online marketing models for
+                businesses that aren't shrouded in jargon. This gives our
+                clients an understanding of the processes involved in creating
+                an online marketing strategy that produces results. To be
+                present in the digital landscape of your market, you need to
+                effectively use language, image and representation to craft
+                compelling messages that initiate engagement.
             </p>
         </div>
     </div>
