--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,35 +1,33 @@
-<div class="container">
+<div class="container roomy-row">
     <div class="row text-center">
-        <div class="col-md-3 feature_grid1"> <i class="fa fa-search fa-3x"></i>
-            <h3><a href="#">SEO</a></h3>
+        <div class="col-sm-6 col-md-3 service-col"> <i class="fa fa-search fa-3x"></i>
+            <h3>SEO</h3>
             <p>
-                Lorem ipsum dolor sit amet, facilisis egestas sodales non luctus, sem quas potenti malesuada vel 
-                phasellus.
+                We deliver a highly comprehensive approach to SEO which includes onsite, offsite, keyword, social 
+                signal and content analysis of your website.
             </p>
-            <a href="#" class="btn btn-default">More</a>
         </div>
-        <div class="col-md-3 feature_grid1"> <i class="fa fa-graduation-cap fa-3x"></i>
-            <h3><a href="#">Training</a></h3>
+        <div class="col-sm-6 col-md-3 service-col"> <i class="fa fa-graduation-cap fa-3x"></i>
+            <h3>Training</h3>
             <p>
-                Lorem ipsum dolor sit amet, facilisis egestas sodales non luctus, sem quas potenti malesuada vel 
-                phasellus.
+                Our holistic approach to online marketing enables us to provide a structure for delivery that is suited 
+                to our customer’s needs.
             </p>
-            <a href="#" class="btn btn-default">More</a>
         </div>
-        <div class="col-md-3 feature_grid1"> <i class="fa fa-comment fa-3x"></i>
-            <h3><a href="#">Social Marketing</a></h3>
+        <div class="clearfix visible-sm-block"></div>
+        <div class="col-sm-6 col-md-3 service-col"> <i class="fa fa-comment fa-3x"></i>
+            <h3>Social Media</h3>
             <p>
-                Lorem ipsum dolor sit amet, facilisis egestas sodales non luctus, sem quas potenti malesuada vel 
-                phasellus.
+                Social Media is about interaction and for that to occur with the audience you desire, your content has 
+                to be engaging.
             </p>
-            <a href="#" class="btn btn-default">More</a> </div>
-        <div class="col-md-3 feature_grid2"> <i class="fa fa-line-chart fa-3x"></i>
-            <h3><a href="#">Reporting</a></h3>
+        </div>
+        <div class="col-sm-6 col-md-3 service-col"> <i class="fa fa-rocket fa-3x"></i>
+            <h3>PPC</h3>
             <p>
-                Lorem ipsum dolor sit amet, facilisis egestas sodales non luctus, sem quas potenti malesuada vel 
-                phasellus.
+                Pay Per Click advertising is an instrumental method for reaching a very specific audience quickly and 
+                effectively.
             </p>
-            <a href="#" class="btn btn-default">More</a>
         </div>
     </div>
 </div>
