--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,40 +1,52 @@
 
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+<div id="carousel-testimonials" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        <li data-target="#carousel-testimonials" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-testimonials" data-slide-to="1"></li>
+        <li data-target="#carousel-testimonials" data-slide-to="2"></li>
     </ol>
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="http://placehold.it/1200x240/ffe066/000000" alt="...">
-            <div class="carousel-caption">
-                ...
+            <div class="carousel-content">
+                <div class="row">
+                    <div class="col-sm-8 col-sm-offset-2">
+                        {% capture t1 %}{% include _testimonials/andy.md %}{% endcapture %}
+                        {{ t1 | markdownify }}
+                    </div>
+                </div>
             </div>
         </div>
         <div class="item">
-            <img src="http://placehold.it/1200x240/f6791f/000000" alt="...">
-            <div class="carousel-caption">
-                ...
+            <div class="carousel-content">
+                <div class="row">
+                    <div class="col-sm-8 col-sm-offset-2">
+                        {% capture t2 %}{% include _testimonials/faye.md %}{% endcapture %}
+                        {{ t2 | markdownify }}
+                    </div>
+                </div>
             </div>
         </div>
         <div class="item">
-            <img src="http://placehold.it/1200x240/E8117F/000000" alt="...">
-            <div class="carousel-caption">
-                ...
+            <div class="carousel-content">
+                <div class="row">
+                    <div class="col-sm-8 col-sm-offset-2">
+                        {% capture t3 %}{% include _testimonials/sammi-sparke.md %}{% endcapture %}
+                        {{ t3 | markdownify }}
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
     <!-- Controls -->
-    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <a class="left carousel-control" href="#carousel-testimonials" role="button" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
     </a>
-    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <a class="right carousel-control" href="#carousel-testimonials" role="button" data-slide="next">
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
