--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,168 @@
+<div class="background-dark roomy-row">
+    <div class="container text-right social-list text-center">
+        <ul class="list-inline list-inline tight-below">
+            <li><a href="https://twitter.com/MantraMediaLtd" class="sl-twitter"><i class="fa fa-twitter-square fa-3x"></i></a></li>
+            <li><a href="https://www.linkedin.com/company/mantra-media-ltd" class="sl-linkedin"><i class="fa fa-linkedin-square fa-3x"></i></a></li>
+            <li><a href="https://www.facebook.com/MantraMedia" class="sl-facebook"><i class="fa fa-facebook-square fa-3x"></i></a></li>
+                <li><a href="https://plus.google.com/u/0/+MantrahqGoogle/posts" class="sl-google-plus"><i class="fa fa-google-plus-square fa-3x"></i></a></li>
+        </ul>
+    </div>
+</div>
+
+<div class="background-light roomy-row">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 col-sm-offset-3">
+                <p class="lead">
+                    Want to know how we can help you? <strong>Get in touch</strong>.
+                </p>
+                <div id="feedback"></div>
+                <form method="post" id="contactForm" action="http://formspree.io/will@wbarton.co.uk">
+                    <input type="text" name="_gotcha" style="display:none" />
+                    <input type="hidden" name="_subject" value="New enquiry to mantrahq.com" />
+                    <div class="form-group">
+                        <label for="inputEmail">Email address</label>
+                        <input type="email" class="form-control" id="inputEmail" name="_replyto" placeholder="Enter email">
+                    </div>
+                    <div class="form-group">
+                        <label for="inputMessage">Message</label>
+                        <textarea class="form-control" rows="6" id="inputMessage" name="message" placeholder="Your message"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="footer background-dark text-medium roomy-row">
+      <div class="container">
+          <p class="text-center">
+              &copy; Copyright {{ site.year }} <strong>Mantra Media Ltd</strong> 21-22 Wenlock Road, London, N1 7GU
+          </p>
+          <p class="text-center">
+              Read our <a href="/privacy-policy/">Privacy policy</a>.
+          </p>
+      </div>
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="{{ "/js/bootstrap.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/jquery.validate.min.js" | prepend: site.baseurl }}"></script>
+
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+$('#topnavbar').affix({
+    offset: {
+        top: $('#banner').height()
+    }   
+});
+
+
+$(window).scroll(function() {
+    if ($(this).scrollTop() > 10){  
+        $('[data-sticky]').addClass('sticky');
+    } else {
+        $('[data-sticky]').removeClass('sticky');
+    }
+});
+
+$( window ).load(function() {
+setCarouselHeight('#carousel-testimonials');
+
+    function setCarouselHeight(id){
+        var slideHeight = [];
+        $(id+' .item').each(function(){
+            // add all slide heights to an array
+            slideHeight.push($(this).height());
+        });
+
+        // find the tallest item
+        max = Math.max.apply(null, slideHeight);
+
+        // set the slide's height
+        $(id+' .carousel-content').each(function(){
+            $(this).css('height',max+'px');
+        });
+    }
+});
+
+$('#contactForm').validate({
+    highlight: function(element) {
+        $(element).closest('.form-group').addClass('has-error');
+    },
+
+    unhighlight: function(element) {
+        $(element).closest('.form-group').removeClass('has-error');
+    },
+
+    errorElement: 'span',
+    errorClass: 'help-block',
+    errorPlacement: function(error, element) {
+        if(element.parent('.input-group').length) {
+            error.insertAfter(element.parent());
+        } else {
+            error.insertAfter(element);
+        }
+    },
+
+    submitHandler: function(form) {
+        $.ajax({
+            url: "//formspree.io/hello@mantrahq.com", 
+            method: "POST",
+            data: $(this).serialize(),
+            dataType: "json",
+            success: function(data){
+                // Success message
+                $('#feedback').html("<div class='alert alert-success'>");
+                $('#feedback > .alert-success').html("<button type='button' class='close' data-dismiss='alert' aria-hidden='true'>&times;")
+                    .append("</button>");
+                $('#feedback > .alert-success')
+                    .append("<strong>Thank you.</strong> Your message has been sent.");
+                $('#feedback > .alert-success')
+                    .append('</div>');
+
+                //clear all fields
+                $('#contactForm').trigger("reset");
+                $btn.button('reset')
+            },
+
+            error: function(){
+                // Fail message
+                $('#feedback').html("<div class='alert alert-danger'>");
+                $('#feedback > .alert-danger').html("<button type='button' class='close' data-dismiss='alert' aria-hidden='true'>&times;")
+                    .append("</button>");
+                $('#feedback > .alert-danger').append("<strong>Sorry</strong> the mail server is not responding. Please try again later!");
+                $('#feedback > .alert-danger').append('</div>');
+                //clear all fields
+                $('#contactForm').trigger("reset");
+            }
+        });
+    }
+});
+
+$(function() {
+  $('[data-scrollto]').click(function() {
+    if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+      var target = $(this.hash);
+      target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+      if (target.length) {
+        var targetOffset = target.offset().top - 74;
+        $('html,body').animate({
+          scrollTop: targetOffset
+        }, 1000);
+        return false;
+      }
+    }
+  });
+});
+</script>
+
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-              })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-58543934-1', 'auto');
+    ga('create', 'UA-58543934-1', 'auto');
     ga('send', 'pageview');
-
 </script>
