--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,11 @@
     {% include head.html %}
 
     <body>
+    
 
         {% include header.html %}
+
+        {{ content }}
 
         {% include footer.html %}
 
