--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,11 @@
 ---
 layout: default
 ---
-<div class="post">
-
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
-
-  <article class="post-content">
-    {{ content }}
-  </article>
-
+<div class="container background-light">
+    <div class="row">
+        <div class="col-sm-12 col-md-8 col-md-offset-2">
+            <h1>{{ page.title }}</h1>
+            {{ content }}
+        </div>
+    </div>
 </div>
