--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,22 @@
 ---
 layout: default
 ---
-<div class="post">
+<div class="container background-light">
+    <div class="row">
+        <div class="col-sm-12 col-md-8 col-md-offset-2">
+            <h1 class="post-title">{{ page.title }}</h1>
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
+            <p><i class="fa fa-calendar"></i> Posted on {{ page.date | date: "%-d %B %Y"}}</p>
 
-  <article class="post-content">
-    {{ content }}
-  </article>
+                {% if page.author %}
+                <p><i class="fa fa-user"></i> by {{ page.author }}</p>
+                {% endif %}
+                {% if page.meta %} • {{ page.meta }}{% endif %}
+            <hr>
+            <img src="http://placehold.it/900x300" class="img-responsive">
+            <hr>
 
+            {{ content }}
+        </div>
+    </div>
 </div>
