--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -7,7 +7,10 @@ html {
 body {
     height: 100%;
     background: $gray-lighter;
-    padding-top: 75px;
+
+    @media (min-width: $screen-sm) {
+        padding-top: 75px;
+    }
 
     &.home-page {
         padding-top: 0;
