--- a/_sass/bootstrap/_carousel.scss
+++ b/_sass/bootstrap/_carousel.scss
@@ -27,23 +27,30 @@
 
     // WebKit CSS3 transforms for supported devices
     @media all and (transform-3d), (-webkit-transform-3d) {
+      -webkit-transition: -webkit-transform .6s ease-in-out;
+      -o-transition: -o-transform .6s ease-in-out;
       transition: transform .6s ease-in-out;
+      -webkit-backface-visibility: hidden;
       backface-visibility: hidden;
+      -webkit-perspective: 1000;
       perspective: 1000;
 
       &.next,
       &.active.right {
+        -webkit-transform: translate3d(100%, 0, 0);
         transform: translate3d(100%, 0, 0);
         left: 0;
       }
       &.prev,
       &.active.left {
+        -webkit-transform: translate3d(-100%, 0, 0);
         transform: translate3d(-100%, 0, 0);
         left: 0;
       }
       &.next.left,
       &.prev.right,
       &.active {
+        -webkit-transform: translate3d(0, 0, 0);
         transform: translate3d(0, 0, 0);
         left: 0;
       }
