--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -43,11 +43,11 @@
 
     <!-- Controls -->
     <a class="left carousel-control" href="#carousel-testimonials" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-chevron-left hidden-xs" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
     </a>
     <a class="right carousel-control" href="#carousel-testimonials" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-chevron-right hidden-xs" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
 </div>
