SM links open in new tab.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <div class="background-dark roomy-row">
     <div class="container text-right social-list text-center">
         <ul class="list-inline list-inline tight-below">
-            <li><a href="https://twitter.com/MantraMediaLtd" class="sl-twitter"><i class="fa fa-twitter-square fa-3x"></i></a></li>
-            <li><a href="https://www.linkedin.com/company/mantra-media-ltd" class="sl-linkedin"><i class="fa fa-linkedin-square fa-3x"></i></a></li>
-            <li><a href="https://www.facebook.com/MantraMedia" class="sl-facebook"><i class="fa fa-facebook-square fa-3x"></i></a></li>
-                <li><a href="https://plus.google.com/u/0/+MantrahqGoogle/posts" class="sl-google-plus"><i class="fa fa-google-plus-square fa-3x"></i></a></li>
+            <li><a href="https://twitter.com/MantraMediaLtd" class="sl-twitter" target="_blank"><i class="fa fa-twitter-square fa-3x"></i></a></li>
+            <li><a href="https://www.linkedin.com/company/mantra-media-ltd" class="sl-linkedin" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a></li>
+            <li><a href="https://www.facebook.com/MantraMedia" class="sl-facebook" target="_blank"><i class="fa fa-facebook-square fa-3x"></i></a></li>
+                <li><a href="https://plus.google.com/u/0/+MantrahqGoogle/posts" class="sl-google-plus" target="_blank"><i class="fa fa-google-plus-square fa-3x"></i></a></li>
         </ul>
     </div>
 </div>
