--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,10 +5,10 @@
 
         </div>
             <ul class="list-inline list-inline tight-below social-list text-center">
-                <li><a href="https://twitter.com/MantraMediaLtd" class="sl-twitter"><i class="fa fa-twitter-square fa-2x"></i></a></li>
-                <li><a href="https://www.linkedin.com/company/mantra-media-ltd" class="sl-linkedin"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
-                <li><a href="https://www.facebook.com/MantraMedia" class="sl-facebook"><i class="fa fa-facebook-square fa-2x"></i></a></li>
-                <li><a href="https://plus.google.com/u/0/+MantrahqGoogle/posts" class="sl-google-plus"><i class="fa fa-google-plus-square fa-2x"></i></a></li>
+                <li><a href="https://twitter.com/MantraMediaLtd" class="sl-twitter" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a></li>
+                <li><a href="https://www.linkedin.com/company/mantra-media-ltd" class="sl-linkedin" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
+                <li><a href="https://www.facebook.com/MantraMedia" class="sl-facebook" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a></li>
+                <li><a href="https://plus.google.com/u/0/+MantrahqGoogle/posts" class="sl-google-plus" target="_blank"><i class="fa fa-google-plus-square fa-2x"></i></a></li>
             </ul>
         <div id="navbar" class="navbar-collapse collapse">
         </div><!--/.nav-collapse -->
