Fix contact form.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
                     Want to know how we can help you? <strong>Get in touch</strong>.
                 </p>
                 <div id="feedback"></div>
-                <form method="post" id="contactForm" action="http://formspree.io/will@wbarton.co.uk">
+                <form method="post" id="contactForm" action="http://formspree.io/hello@mantrahq.com">
                     <input type="text" name="_gotcha" style="display:none" />
                     <input type="hidden" name="_subject" value="New enquiry to mantrahq.com" />
                     <div class="form-group">
