--- a/_includes/about-us.html
+++ b/_includes/about-us.html
@@ -3,17 +3,9 @@
     <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
             <p class="lead">
-                At Mantra we create strategies and online marketing models for
-                businesses that aren't shrouded in jargon. This gives our
-                clients an understanding of the processes involved in creating
-                an online marketing strategy that produces results. To be
-                present in the digital landscape of your market, you need to
-                effectively use language, image and representation to craft
-                compelling messages that initiate engagement.
+                We create a sophisticated wow, with a wink to the playful and a professionalism that outshines the competition. If you're searching for online marketing that delivers results without the jargon, look no further.
             </p>
         </div>
     </div>
 </div>
 </div>
-
-
