New testimonial added.

--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -5,11 +5,22 @@
         <li data-target="#carousel-testimonials" data-slide-to="0" class="active"></li>
         <li data-target="#carousel-testimonials" data-slide-to="1"></li>
         <li data-target="#carousel-testimonials" data-slide-to="2"></li>
+        <li data-target="#carousel-testimonials" data-slide-to="3"></li>
     </ol>
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
         <div class="item active">
+            <div class="carousel-content">
+                <div class="row">
+                    <div class="col-sm-8 col-sm-offset-2">
+                        {% capture t4 %}{% include _testimonials/crobar.md %}{% endcapture %}
+                        {{ t4 | markdownify }}
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="item">
             <div class="carousel-content">
                 <div class="row">
                     <div class="col-sm-8 col-sm-offset-2">
