--- a/_includes/services.html
+++ b/_includes/services.html
@@ -36,30 +36,26 @@
         <div class="col-sm-6 col-md-3 service-col"> <i class="fa fa-pencil-square-o fa-3x"></i>
             <h3>Content</h3>
             <p>
-                With a background in persuasive communication and forensic linguistics, our content production
-                services including website copy, blogging and social media copy are of the highest caliber.
+                With a background in persuasive communication and forensic linguistics, we produce engaging content including website copy, blogging and social media copy.
             </p>
         </div>
         <div class="col-sm-6 col-md-3 service-col"> <i class="fa fa-th-list  fa-3x"></i>
             <h3>Web Design</h3>
             <p>
-                Our web developers balance aesthetic integrity with intuitive user design is paramount for a
-                website to be a compelling profit producing medium.
+                Our web developers balance aesthetic integrity with intuitive user design. It's paramount for a website to become a compelling profit producing medium.
             </p>
         </div>
         <div class="clearfix visible-sm-block"></div>
         <div class="col-sm-6 col-md-3 service-col"> <i class="fa fa-camera-retro fa-3x"></i>
             <h3>Photography</h3>
             <p>
-                We offer a comprehensive range of photoshoot planning and delivery, including direction,
-                photography, makeup, modelling and post-production editing.
+                We offer a comprehensive range of photoshoot planning and delivery, including direction, photography, makeup, modelling and post-production editing.
             </p>
         </div>
         <div class="col-sm-6 col-md-3 service-col"> <i class="fa fa-registered fa-3x"></i>
             <h3>Branding</h3>
             <p>
-                Identity becomes intrinsic. Let's it right the first time. The sophisticated wow factor is
-                everything in design.
+                Identity becomes intrinsic. Let's get it right the first time. The sophisticated wow factor is everything in design.
             </p>
         </div>
     </div>
