--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,11 @@
 
         {% include footer.html %}
 
+        <script>
+            $('.disabled').click(function(e) {
+                e.preventDefault() ;
+            }) ;
+        </script>
     </body>
 
 </html>
