--- a/fee-calculator/scss/style.scss
+++ b/fee-calculator/scss/style.scss
@@ -7,6 +7,7 @@ $primary: #b20f3c;
 $border-radius: 0;
 $border-radius-lg: $border-radius;
 $border-radius-sm: $border-radius;
+$hr-opacity: .5;
 
 @import "../node_modules/bootstrap/scss/functions";
 @import "../node_modules/bootstrap/scss/variables";
@@ -24,6 +25,10 @@ $border-radius-sm: $border-radius;
 @import "../node_modules/bootstrap/scss/custom-forms";
 @import "../node_modules/bootstrap/scss/utilities";
 @import "../node_modules/bootstrap/scss/print";
+
+hr {
+  border-top: 1px solid rgba(0,0,0,0.4);
+}
 
 .container-fluid {
   max-width: 660px;
